Fixes misaligned photo

--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,7 @@ blockquote {
 
 .about .mugshot img {
 	border-radius: 40px;
+    display: inline-block;
 }
 
 .pagination {
